@@ -565,3 +565,4 @@ m4_include(tests/t_override_author_date.at)
 m4_include(tests/t_add_stomp_file.at)
 m4_include(tests/t_database_check_minor.at)
 m4_include(tests/t_db_kill_rev_locally.at)
+m4_include(tests/t_drop_attr.at)
